REGRESSION: Scroll snapping triggers body scroll https://bugs.webkit.org/show_bug.cgi?id=220056 Source/WebCore:

<rdar://problem/72595482>

Reviewed by Wenson Hsieh.

ScrollController::handleWheelEvent() needs to return true to indicate that it
handled the event when it has been processed for scroll snap. If we don't do this,
the latching code thinks that no node handled the event so the latch times out.

Test: fast/scrolling/latching/scroll-snap-latching.html

* platform/cocoa/ScrollController.h:
* platform/cocoa/ScrollController.mm:
(WebCore::ScrollController::handleWheelEvent):

LayoutTests:

Reviewed by Wenson Hsieh.

* fast/scrolling/latching/scroll-snap-latching-expected.txt: Added.
* fast/scrolling/latching/scroll-snap-latching.html: Added.
* platform/mac-wk1/fast/scrolling/latching/scroll-snap-latching-expected.txt: Added.

Canonical link: https://commits.webkit.org/232669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271072 268f45cc-cd09-0410-ab3c-d52691b4dbfc